# agario

./: .gitignore  README.md  main.py  pyproject.toml
agario/: __init__.py  config.py  models.py  server.py  spatial.py  world.py
agario.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agario/bot_plugins/: __init__.py  core.py
agario/bots/: __init__.py  manager.py  registry.py  types.py
ai_bot/: README.md  pyproject.toml
ai_bot/ai_bot/models/: policy_value.pt
ai_bot/src/agario_ai_bot/: __init__.py  _bootstrap.py  action_space.py  demo.py  gpu_rollout.py  io.py  model.py  observation.py  planner.py  runtime_plugin.py  settings.py  train.py
cpp_backend/: CMakeLists.txt  README.md
cpp_backend/src/: config.cpp  config.hpp  main.cpp  models.hpp  server.cpp  server.hpp  spatial_hash.hpp  world.cpp  world.hpp
cpp_backend/src/bots/: core.cpp  core.hpp  manager.cpp  manager.hpp  registry.cpp  registry.hpp  types.hpp
static/: client.js  index.html  styles.css
