[project]
name = "agario"
version = "0.1.0"
description = "Multiplayer Agar.io-style prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
agario = "main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["agario*"]
namespaces = false

[tool.uv.workspace]
members = [
    "ai_bot",
]
